More work on the jakarta upgrade