@@ -29,6 +29,7 @@ import java.io.Serializable;
 import java.io.Writer;
 import java.util.ArrayList;
 import java.util.Collection;
+import java.util.List;
 import java.util.Map;
 
 /**
@@ -74,13 +75,13 @@ public class JSONArray implements Serializable {
     /**
      * The arrayList where the JSONArray's properties are kept.
      */
-    private ArrayList myArrayList;
+    private List<Object> myArrayList;
 
     /**
      * Construct an empty JSONArray.
      */
     public JSONArray() {
-        this.myArrayList = new ArrayList();
+        this.myArrayList = new ArrayList<>();
     }
 
     /**
@@ -88,8 +89,8 @@ public class JSONArray implements Serializable {
      *
      * @param collection A Collection.
      */
-    public JSONArray(Collection collection) {
-        this.myArrayList = (collection == null) ? new ArrayList() : new ArrayList(collection);
+    public JSONArray(Collection<?> collection) {
+        this.myArrayList = (collection == null) ? new ArrayList<>() : new ArrayList<>(collection);
     }
 
     /**
@@ -503,7 +504,7 @@ public class JSONArray implements Serializable {
      * @param value A Collection value.
      * @return this.
      */
-    public JSONArray put(Collection value) {
+    public JSONArray put(Collection<?> value) {
         put(new JSONArray(value));
 
         return this;
@@ -517,7 +518,7 @@ public class JSONArray implements Serializable {
      * @throws JSONException if the value is not finite.
      */
     public JSONArray put(double value) throws JSONException {
-        Double d = new Double(value);
+        Double d = Double.valueOf(value);
 
         JSONObject.testValidity(d);
         put(d);
@@ -532,7 +533,7 @@ public class JSONArray implements Serializable {
      * @return this.
      */
     public JSONArray put(int value) {
-        put(new Integer(value));
+        put(Integer.valueOf(value));
 
         return this;
     }
@@ -544,7 +545,7 @@ public class JSONArray implements Serializable {
      * @return this.
      */
     public JSONArray put(long value) {
-        put(new Long(value));
+        put(Long.valueOf(value));
 
         return this;
     }
@@ -555,7 +556,7 @@ public class JSONArray implements Serializable {
      * @param value A Map value.
      * @return this.
      */
-    public JSONArray put(Map value) {
+    public JSONArray put(Map<String, Object> value) {
         put(new JSONObject(value));
 
         return this;
@@ -597,7 +598,7 @@ public class JSONArray implements Serializable {
      * @return this.
      * @throws JSONException If the index is negative or if the value is not finite.
      */
-    public JSONArray put(int index, Collection value) throws JSONException {
+    public JSONArray put(int index, Collection<?> value) throws JSONException {
         put(index, new JSONArray(value));
 
         return this;
@@ -613,7 +614,7 @@ public class JSONArray implements Serializable {
      * @throws JSONException If the index is negative or if the value is not finite.
      */
     public JSONArray put(int index, double value) throws JSONException {
-        put(index, new Double(value));
+        put(index, Double.valueOf(value));
 
         return this;
     }
@@ -628,7 +629,7 @@ public class JSONArray implements Serializable {
      * @throws JSONException If the index is negative.
      */
     public JSONArray put(int index, int value) throws JSONException {
-        put(index, new Integer(value));
+        put(index, Integer.valueOf(value));
 
         return this;
     }
@@ -643,7 +644,7 @@ public class JSONArray implements Serializable {
      * @throws JSONException If the index is negative.
      */
     public JSONArray put(int index, long value) throws JSONException {
-        put(index, new Long(value));
+        put(index, Long.valueOf(value));
 
         return this;
     }
@@ -656,7 +657,7 @@ public class JSONArray implements Serializable {
      * @return this.
      * @throws JSONException If the index is negative or if the the value is an invalid number.
      */
-    public JSONArray put(int index, Map value) throws JSONException {
+    public JSONArray put(int index, Map<String, Object> value) throws JSONException {
         put(index, new JSONObject(value));
 
         return this;
